--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 anyio==4.12.1
 asgiref==3.8.1
+attrs==25.4.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.3.1
@@ -14,6 +15,7 @@ django_compressor==4.6.0
 djangorestframework==3.15.2
 djangorestframework-stubs==3.16.7
 djangorestframework_simplejwt==5.5.1
+drf-spectacular==0.29.0
 factory_boy==3.3.3
 Faker==40.4.0
 gunicorn==23.0.0
@@ -22,7 +24,10 @@ hiredis==3.3.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+inflection==0.5.1
 iniconfig==2.3.0
+jsonschema==4.26.0
+jsonschema-specifications==2025.9.1
 packaging==26.0
 pillow==11.1.0
 pluggy==1.6.0
@@ -34,15 +39,19 @@ pytest-asyncio==1.3.0
 pytest-cov==7.0.0
 pytest-django==4.11.1
 python-decouple==3.8
+PyYAML==6.0.3
 rcssmin==1.2.2
 redis==7.1.1
+referencing==0.37.0
 requests==2.32.3
 respx==0.22.0
 rjsmin==1.2.5
+rpds-py==0.30.0
 sqlparse==0.5.3
 types-PyYAML==6.0.12.20250915
 types-requests==2.32.4.20260107
 typing_extensions==4.15.0
+uritemplate==4.2.0
 urllib3==2.3.0
 uvicorn==0.40.0
 whitenoise==6.11.0
